mongodb & entity repo added

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,5 +4,7 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="MongoDB.Driver" Version="3.5.1" />
+    <PackageVersion Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 </Project>
