--- a/apps/tasker/src/Tasker.Infrastructure/Tasker.Infrastructure.csproj
+++ b/apps/tasker/src/Tasker.Infrastructure/Tasker.Infrastructure.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="MongoDB.Driver" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tasker.Persistence\Tasker.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
