--- a/apps/tasker/src/Tasker.Persistence/Tasker.Persistence.csproj
+++ b/apps/tasker/src/Tasker.Persistence/Tasker.Persistence.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DAL\MongoDB\EntityConfigs\" />
+    <PackageReference Include="MongoDB.Driver" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tasker.Domain\Tasker.Domain.csproj" />
   </ItemGroup>
 
 </Project>
