--- a/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
+++ b/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
     <PackageReference Include="Newtonsoft.Json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tasker.Infrastructure\Tasker.Infrastructure.csproj" />
+    <ProjectReference Include="..\Tasker.Persistence\Tasker.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
