--- a/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
+++ b/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
@@ -10,12 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+    <PackageReference Include="Newtonsoft.Json" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\RebrandingMzs.ServiceDefaults\RebrandingMzs.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\..\Tasker.Application\Tasker.Application.csproj" />
   </ItemGroup>
 
 </Project>
