project referencing updated to properly follow the clean architecture pattern

--- a/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
+++ b/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
@@ -12,8 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tasker.Infrastructure\Tasker.Infrastructure.csproj" />
-    <ProjectReference Include="..\Tasker.Persistence\Tasker.Persistence.csproj" />
+    <ProjectReference Include="..\Tasker.Domain\Tasker.Domain.csproj" />
   </ItemGroup>
 
 </Project>
