--- a/apps/tasker/src/Tasker.Persistence/Tasker.Persistence.csproj
+++ b/apps/tasker/src/Tasker.Persistence/Tasker.Persistence.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tasker.Application\Tasker.Application.csproj" />
     <ProjectReference Include="..\Tasker.Domain\Tasker.Domain.csproj" />
   </ItemGroup>
 
