--- a/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
+++ b/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -20,6 +20,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\RebrandingMzs.ServiceDefaults\RebrandingMzs.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\Tasker.Application\Tasker.Application.csproj" />
+    <ProjectReference Include="..\..\Tasker.Infrastructure\Tasker.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Tasker.Persistence\Tasker.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
