--- a/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
+++ b/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\..\Tasker.Persistence\Tasker.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
