--- a/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
+++ b/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
     <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="Scalar.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
   </ItemGroup>
 
   <ItemGroup>
