kernel concept introduced to reuse codebase across several apps & apis & services without rewriting! can be useful to implement any poc quickly

--- a/kernel/Kernel.Processes/Kernel.Processes.csproj
+++ b/kernel/Kernel.Processes/Kernel.Processes.csproj
@@ -14,13 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\kernel\Kernel.Processes\Kernel.Processes.csproj" />
-    <ProjectReference Include="..\Tasker.Domain\Tasker.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Extensions\" />
+    <ProjectReference Include="..\Kernel.Drivers\Kernel.Drivers.csproj" />
   </ItemGroup>
 
 </Project>
