moving common functionalities to kernel

--- a/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
+++ b/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\kernel\Kernel.Helpers\Kernel.Helpers.csproj" />
     <ProjectReference Include="..\..\..\..\kernel\Kernel.Processes\Kernel.Processes.csproj" />
     <ProjectReference Include="..\Tasker.Domain\Tasker.Domain.csproj" />
   </ItemGroup>
