--- a/apps/tasker/src/Tasker.Domain/Tasker.Domain.csproj
+++ b/apps/tasker/src/Tasker.Domain/Tasker.Domain.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Configs\" />
     <Folder Include="Aggregates\" />
     <Folder Include="Events\" />
+    <Folder Include="Helper\" />
     <Folder Include="Logics\" />
     <Folder Include="Constants\" />
   </ItemGroup>
