JWT Auth & Google Auth has been moved to kernel

--- a/kernel/Kernel.Managers/Kernel.Managers.csproj
+++ b/kernel/Kernel.Managers/Kernel.Managers.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <PackageReference Include="Newtonsoft.Json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kernel.Drivers\Kernel.Drivers.csproj" />
+  </ItemGroup>
+
 </Project>
