JWT Token Manager dependency added

--- a/kernel/Kernel.Processes/Kernel.Processes.csproj
+++ b/kernel/Kernel.Processes/Kernel.Processes.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Kernel.Drivers\Kernel.Drivers.csproj" />
+    <ProjectReference Include="..\Kernel.Managers\Kernel.Managers.csproj" />
   </ItemGroup>
 
 </Project>
