--- a/kernel/Kernel.Managers/Kernel.Managers.csproj
+++ b/kernel/Kernel.Managers/Kernel.Managers.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Kernel.Drivers\Kernel.Drivers.csproj" />
+    <ProjectReference Include="..\Kernel.Helpers\Kernel.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
