--- a/kernel/Kernel.Managers/Kernel.Managers.csproj
+++ b/kernel/Kernel.Managers/Kernel.Managers.csproj
@@ -7,14 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" />
     <PackageReference Include="Google.Apis.Auth" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Newtonsoft.Json" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Kernel.Drivers\Kernel.Drivers.csproj" />
-    <ProjectReference Include="..\Kernel.Helpers\Kernel.Helpers.csproj" />
+    <ProjectReference Include="..\Kernel.Processes\Kernel.Processes.csproj" />
   </ItemGroup>
 
 </Project>
