--- a/kernel/Kernel.Processes/Kernel.Processes.csproj
+++ b/kernel/Kernel.Processes/Kernel.Processes.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" />
     <PackageReference Include="Newtonsoft.Json" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Kernel.Managers\Kernel.Managers.csproj" />
+    <ProjectReference Include="..\Kernel.Drivers\Kernel.Drivers.csproj" />
   </ItemGroup>
 
 </Project>
