--- a/kernel/Kernel.Resources/Kernel.Resources.csproj
+++ b/kernel/Kernel.Resources/Kernel.Resources.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kernel.Managers\Kernel.Managers.csproj" />
+  </ItemGroup>
+
 </Project>
