--- a/kernel/Kernel.Modules/Kernel.Modules.csproj
+++ b/kernel/Kernel.Modules/Kernel.Modules.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kernel.Managers\Kernel.Managers.csproj" />
+  </ItemGroup>
+
 </Project>
