--- a/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
+++ b/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <Folder Include="Exceptions\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Features\Auth\" />
   </ItemGroup>
 
 </Project>
