--- a/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
+++ b/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" />
     <PackageReference Include="Newtonsoft.Json" />
