Mzstruct infrastructure redifined

--- a/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
+++ b/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Masstransit\" />
+    <ProjectReference Include="..\Mzstruct.Base\Mzstruct.Base.csproj" />
   </ItemGroup>
 
 </Project>
