--- a/mzstruct/Mzstruct.Storage/Mzstruct.Storage.csproj
+++ b/mzstruct/Mzstruct.Storage/Mzstruct.Storage.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ORM\" />
+    <Folder Include="Blobs\" />
+    <Folder Include="Drives\" />
+    <Folder Include="Local\" />
   </ItemGroup>
 
 </Project>
