--- a/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
+++ b/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\kernel\Kernel.Managers\Kernel.Managers.csproj" />
+    <ProjectReference Include="..\..\..\..\mzstruct\Mzstruct.Common\Mzstruct.Common.csproj" />
     <ProjectReference Include="..\Tasker.Domain\Tasker.Domain.csproj" />
   </ItemGroup>
 
