Infra as modular projs

--- a/mzstruct/Mzstruct.AI/Mzstruct.AI.csproj
+++ b/mzstruct/Mzstruct.AI/Mzstruct.AI.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <Folder Include="Integrations\" />
+    <Folder Include="LLM\" />
+    <Folder Include="Agents\" />
+    <Folder Include="RAG\" />
   </ItemGroup>
 
 </Project>
