--- a/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
+++ b/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
@@ -11,8 +11,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Vector\" />
+    <Folder Include="NoSQL\" />
     <Folder Include="Repositories\" />
-    <Folder Include="ORM\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
   </ItemGroup>
 
 </Project>
