--- a/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
+++ b/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
   </ItemGroup>
 
   <ItemGroup>
