--- a/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
+++ b/apps/tasker/src/Tasker.Application/Tasker.Application.csproj
@@ -12,6 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Contracts\IServices\" />
+    <Folder Include="Contracts\IManagers\" />
+    <Folder Include="Contracts\IJobs\" />
+    <Folder Include="Contracts\IEvents\" />
+    <Folder Include="Contracts\IConfigs\" />
+    <Folder Include="Contracts\IContexts\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Configs\" />
     <Folder Include="Aggregates\" />
