project restructure & code refactoring

--- a/mzstruct/Mzstruct.AI/Mzstruct.AI.csproj
+++ b/mzstruct/Mzstruct.AI/Mzstruct.AI.csproj
@@ -2,9 +2,8 @@
 
   <ItemGroup>
     <Folder Include="Integrations\" />
-    <Folder Include="LLM\" />
-    <Folder Include="Agents\" />
-    <Folder Include="RAG\" />
+    <Folder Include="GenAI\" />
+    <Folder Include="AgenticRAG\" />
   </ItemGroup>
 
 </Project>
