--- a/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
+++ b/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Contracts\IManagers\" />
     <Folder Include="Contracts\IServices\" />
     <Folder Include="Contracts\IEvents\" />
     <Folder Include="Contracts\IJobs\" />
