--- a/mzstruct/Mzstruct.Cloud/Mzstruct.Cloud.csproj
+++ b/mzstruct/Mzstruct.Cloud/Mzstruct.Cloud.csproj
@@ -1,3 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <Folder Include="Azure\" />
+    <Folder Include="AWS\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
