--- a/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
+++ b/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" />
-    <PackageReference Include="Google.Apis.Auth" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" />
     <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="MongoDB.Driver" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
   </ItemGroup>
 
   <ItemGroup>
