--- a/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
+++ b/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
   </ItemGroup>
 
 </Project>
