--- a/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
+++ b/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
@@ -4,13 +4,14 @@
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" />
     <PackageReference Include="Newtonsoft.Json" />
-    <PackageReference Include="MongoDB.Driver" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Contracts\IConfigs\" />
+    <Folder Include="Contracts\IContexts\" />
     <Folder Include="Contracts\IManagers\" />
+    <Folder Include="Contracts\IMappers\" />
     <Folder Include="Contracts\IServices\" />
     <Folder Include="Contracts\IEvents\" />
     <Folder Include="Contracts\IJobs\" />
