--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -31,5 +31,6 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
     <PackageVersion Include="Scalar.AspNetCore" Version="2.11.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.0.1" />
+    <PackageVersion Include="System.Runtime.Caching" Version="10.0.1" />
   </ItemGroup>
 </Project>
