--- a/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
+++ b/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Contracts\IServices\" />
     <Folder Include="Contracts\IEvents\" />
     <Folder Include="Contracts\IJobs\" />
+    <Folder Include="Contracts\IMemories\" />
   </ItemGroup>
 
 </Project>
