--- a/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
+++ b/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
@@ -8,7 +8,7 @@
     <Folder Include="SQL\Context\" />
     <Folder Include="Vector\" />
     <Folder Include="NoSQL\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Repos\" />
   </ItemGroup>
 
   <ItemGroup>
