--- a/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
+++ b/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
@@ -7,4 +7,8 @@
     <ProjectReference Include="..\Mzstruct.DB\Mzstruct.DB.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+  </ItemGroup>
+
 </Project>
