code refactoring & ef enttity config added

--- a/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
+++ b/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ORM\EFCore\Contracts\" />
     <Folder Include="SQL\Context\" />
     <Folder Include="Vector\" />
     <Folder Include="NoSQL\" />
