--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -11,7 +11,8 @@
     "DatabaseName": ""
   },
   "ConnectionStrings": {
-    "DatebaseContext": ""
+    "DatebaseContext": "Server=localhost\\MSSQLLocalDB;Database=TaskerDB;Trusted_Connection=True;TrustServerCertificate=true"
+    //"DefaultConnection": ""
   },
   "JWTAuth": {
     "Issuer": "https://mzsmunna.com",
