--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -11,8 +11,7 @@
     "DatabaseName": ""
   },
   "ConnectionStrings": {
-    "DatebaseContext": "Server=localhost\\MSSQLLocalDB;Database=TaskerDB;Trusted_Connection=True;TrustServerCertificate=true"
-    //"DefaultConnection": ""
+    "DefaultConnection": "Server=localhost\\MSSQLLocalDB;Database=TaskerDB;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "JWTAuth": {
     "Issuer": "https://mzsmunna.com",
