--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -11,7 +11,8 @@
     "DatabaseName": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\MSSQLLocalDB;Database=TaskerDB;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskerDB;Trusted_Connection=True;TrustServerCertificate=true",
+    "DatabaseContext": "Server=.\\MSSQLSERVER01;Database=Auth;TrustServerCertificate=True;Trusted_Connection=true;Encrypt=False"
   },
   "JWTAuth": {
     "Issuer": "https://mzsmunna.com",
