--- a/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
+++ b/apps/tasker/src/Tasker.Presentation/Tasker.RestAPI/Tasker.RestAPI.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\mzstruct\Mzstruct.API\Mzstruct.API.csproj" />
     <ProjectReference Include="..\..\..\..\..\RebrandingMzs.ServiceDefaults\RebrandingMzs.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\Tasker.Infrastructure\Tasker.Infrastructure.csproj" />
