--- a/apps/tasker/src/Tasker.Infrastructure/Tasker.Infrastructure.csproj
+++ b/apps/tasker/src/Tasker.Infrastructure/Tasker.Infrastructure.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="DB\MongoDB\Configs\" />
+    <Folder Include="DB\PostgreSQL\Migrations\" />
   </ItemGroup>
 
 </Project>
