--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -12,6 +12,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskerDB;Trusted_Connection=True;TrustServerCertificate=true",
+    //"DefaultConnection": "Host=db.gqjtrbcqkvmjkxuadypn.supabase.co;Database=postgres;Username=postgres;Password=[YOUR-PASSWORD];SSL Mode=Require;Trust Server Certificate=true",
     "DatabaseContext": "Server=.\\MSSQLSERVER01;Database=Auth;TrustServerCertificate=True;Trusted_Connection=true;Encrypt=False"
   },
   "JWTAuth": {
