base app ef context updated

--- a/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
+++ b/mzstruct/Mzstruct.DB/Mzstruct.DB.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.Data.SqlClient" />
     <PackageReference Include="MongoDB.Driver" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
