--- a/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
+++ b/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Mzstruct.Cache\Mzstruct.Cache.csproj" />
     <ProjectReference Include="..\Mzstruct.DB\Mzstruct.DB.csproj" />
   </ItemGroup>
 
