auth - sigin with - og

--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -20,6 +20,24 @@
     "Audience": "https://mzsmunna.com",
     "SecretKey": ""
   },
+  "SignInWith": {   
+    "GitHub": false,   
+    "LinkedIn": false,    
+    "Microsoft": false,  
+    "Google": false, 
+    "Facebook": false,
+    "Twitter": false, 
+    "WhatsApp": false
+  },
+  "GitHubAuth": { // create an app on github & find ClientId & ClientSecret in https://github.com/settings/applications/appid
+    "Scheme": "github-cookie",
+    "ClientId": "",
+    "ClientSecret": "",
+    "CallbackPath": "/api/auth/RequestGitHubSignIn", // https://localhost:7016/api/auth/RequestGitHubSignIn
+    "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
+    "TokenEndpoint": "https://github.com/login/oauth/access_token",
+    "UserInformationEndpoint": "https://api.github.com/user"
+  },
   "FeatureManagement": { // Feature flags for API versions: https://www.youtube.com/watch?v=KWvSYrSdU44
     "UseUserApiV1": false,
     "UseUserApiV2": true,
