--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -20,17 +20,17 @@
     "Audience": "https://mzsmunna.com",
     "SecretKey": ""
   },
-  "SignInWith": {   
-    "GitHub": false,   
-    "LinkedIn": false,    
-    "Microsoft": false,  
-    "Google": false, 
+  "SignInWith": {
+    "Scheme": "External",
+    "GitHub": false,
+    "LinkedIn": false,
+    "Microsoft": false,
+    "Google": false,
     "Facebook": false,
-    "Twitter": false, 
+    "Twitter": false,
     "WhatsApp": false
   },
   "GitHubAuth": { // create an app on github & find ClientId & ClientSecret in https://github.com/settings/applications/appid
-    "Scheme": "github-cookie",
     "ClientId": "",
     "ClientSecret": "",
     "CallbackPath": "/api/auth/RequestGitHubSignIn", // https://localhost:7016/api/auth/RequestGitHubSignIn
