jwt issue fixed

--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -16,8 +16,8 @@
     "DatabaseContext": "Server=.\\MSSQLSERVER01;Database=Auth;TrustServerCertificate=True;Trusted_Connection=true;Encrypt=False"
   },
   "JWTAuth": {
-    "Issuer": "https://mzsmunna.com",
-    "Audience": "https://mzsmunna.com",
+    "Issuer": "https://mzsmunna.com", //http://localhost:4200
+    "Audience": "https://mzsmunna.com", //http://localhost:4200
     "SecretKey": ""
   },
   "SignInWith": {
