auth - code refactoring & fb oauth added but unchecked: cant acceess fb dev acc

--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -20,23 +20,27 @@
     "Audience": "https://mzsmunna.com", //http://localhost:4200
     "SecretKey": ""
   },
-  "SignInWith": {
-    "Scheme": "External",
-    "GitHub": false,
-    "LinkedIn": false,
-    "Microsoft": false,
-    "Google": false,
-    "Facebook": false,
-    "Twitter": false,
-    "WhatsApp": false
-  },
-  "GitHubAuth": { // create an app on github & find ClientId & ClientSecret in https://github.com/settings/applications/appid
-    "ClientId": "",
-    "ClientSecret": "",
-    "CallbackPath": "/api/auth/RequestGitHubSignIn", // https://localhost:7016/api/auth/RequestGitHubSignIn
-    "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
-    "TokenEndpoint": "https://github.com/login/oauth/access_token",
-    "UserInformationEndpoint": "https://api.github.com/user"
+  "OAuthSignIn": {
+    "GitHubAuth": { // create an app on github & find ClientId & ClientSecret in https://github.com/settings/applications/appid
+      "IsEnabled": true,
+      "ClientId": "",
+      "ClientSecret": "",
+      "CallbackPath": "/api/auth/RequestGitHubSignIn", // https://localhost:7016/api/auth/RequestGitHubSignIn
+      "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
+      "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
+      "TokenEndpoint": "https://github.com/login/oauth/access_token",
+      "UserInformationEndpoint": "https://api.github.com/user"
+    },
+    "FacebookAuth": { // create an app on facebook & find ClientId & ClientSecret in
+      "IsEnabled": false,
+      "ClientId": "",
+      "ClientSecret": "",
+      "CallbackPath": "/api/auth/RequestFacebookSignIn", // https://localhost:7016/api/auth/RequestFacebookSignIn
+      "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
+      "AuthorizationEndpoint": "",
+      "TokenEndpoint": "",
+      "UserInformationEndpoint": ""
+    }
   },
   "FeatureManagement": { // Feature flags for API versions: https://www.youtube.com/watch?v=KWvSYrSdU44
     "UseUserApiV1": false,
