--- a/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
+++ b/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <PackageReference Include="AspNet.Security.OAuth.GitHub" />
     <PackageReference Include="Google.Apis.Auth" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
 
