auth - google oauth - og

--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -27,9 +27,9 @@
       "ClientSecret": "",
       "CallbackPath": "/api/auth/RequestGitHubSignIn", // https://localhost:7016/api/auth/RequestGitHubSignIn
       "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
-      "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
+      "AuthZEndpoint": "https://github.com/login/oauth/authorize",
       "TokenEndpoint": "https://github.com/login/oauth/access_token",
-      "UserInformationEndpoint": "https://api.github.com/user"
+      "UserInfoEndpoint": "https://api.github.com/user"
     },
     "FacebookAuth": { // create an app on facebook & find ClientId & ClientSecret in
       "IsEnabled": false,
@@ -37,9 +37,19 @@
       "ClientSecret": "",
       "CallbackPath": "/api/auth/RequestFacebookSignIn", // https://localhost:7016/api/auth/RequestFacebookSignIn
       "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
-      "AuthorizationEndpoint": "",
+      "AuthZEndpoint": "",
       "TokenEndpoint": "",
-      "UserInformationEndpoint": ""
+      "UserInfoEndpoint": ""
+    },
+    "GoogleAuth": { // create an app on Google & find ClientId & ClientSecret in
+      "IsEnabled": false,
+      "ClientId": "",
+      "ClientSecret": "",
+      "CallbackPath": "/api/auth/RequestGoogleSignIn", // https://localhost:7016/api/auth/RequestGoogleSignIn
+      "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
+      "AuthZEndpoint": "",
+      "TokenEndpoint": "",
+      "UserInfoEndpoint": ""
     }
   },
   "FeatureManagement": { // Feature flags for API versions: https://www.youtube.com/watch?v=KWvSYrSdU44
