auth - code refactoring & google oauth - og

--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -26,7 +26,7 @@
       "ClientId": "",
       "ClientSecret": "",
       "CallbackPath": "/api/auth/RequestGitHubSignIn", // https://localhost:7016/api/auth/RequestGitHubSignIn
-      "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
+      "RedirectPath": "/api/auth/ConfirmGitHubSignIn", // http://localhost:4200/auth/login?token={result.Data}
       "AuthZEndpoint": "https://github.com/login/oauth/authorize",
       "TokenEndpoint": "https://github.com/login/oauth/access_token",
       "UserInfoEndpoint": "https://api.github.com/user"
@@ -36,7 +36,7 @@
       "ClientId": "",
       "ClientSecret": "",
       "CallbackPath": "/api/auth/RequestFacebookSignIn", // https://localhost:7016/api/auth/RequestFacebookSignIn
-      "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
+      "RedirectPath": "/api/auth/ConfirmFacebookSignIn", // http://localhost:4200/auth/login?token={result.Data}
       "AuthZEndpoint": "",
       "TokenEndpoint": "",
       "UserInfoEndpoint": ""
@@ -46,7 +46,7 @@
       "ClientId": "",
       "ClientSecret": "",
       "CallbackPath": "/api/auth/RequestGoogleSignIn", // https://localhost:7016/api/auth/RequestGoogleSignIn
-      "RedirectPath": "/ui/auth/login?token=", // http://localhost:4200/auth/login?token={result.Data}
+      "RedirectPath": "/api/auth/ConfirmGoogleSignIn", // http://localhost:4200/auth/login?token={result.Data}
       "AuthZEndpoint": "",
       "TokenEndpoint": "",
       "UserInfoEndpoint": ""
