--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "KeyVault": {
+    "Url": "https://mz-secret-kv.vault.azure.net/",
+    "ClientId": "",
+    "ClientSecret": "",
+    "DirectoryId": ""
+  },
   "MongoDBConfig": {
     "ConnectionString": "",
     "DatabaseName": ""
