--- a/mzstruct/Mzstruct.Cloud/Mzstruct.Cloud.csproj
+++ b/mzstruct/Mzstruct.Cloud/Mzstruct.Cloud.csproj
@@ -4,4 +4,9 @@
     <Folder Include="AWS\" />
     <Folder Include="Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" />
+    <PackageReference Include="Azure.Identity" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" />
+  </ItemGroup>
 </Project>
