--- a/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
+++ b/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\Mzstruct.Auth\Mzstruct.Auth.csproj" />
     <ProjectReference Include="..\Mzstruct.Base\Mzstruct.Base.csproj" />
     <ProjectReference Include="..\Mzstruct.Cache\Mzstruct.Cache.csproj" />
+    <ProjectReference Include="..\Mzstruct.Cloud\Mzstruct.Cloud.csproj" />
     <ProjectReference Include="..\Mzstruct.DB\Mzstruct.DB.csproj" />
   </ItemGroup>
 
