--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -58,6 +58,14 @@
       "UserInfoEndpoint": ""
     }
   },
+  "SMS": {
+    "Twilio": {
+      "Sid": "",
+      "AuthToken": "",
+      "ServiceSid": "",
+      "FromPhone": "+8801744697929"
+    }
+  },
   "FeatureManagement": { // Feature flags for API versions: https://www.youtube.com/watch?v=KWvSYrSdU44
     "UseUserApiV1": false,
     "UseUserApiV2": true,
