massive code refactoring

--- a/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
+++ b/mzstruct/Mzstruct.Auth/Mzstruct.Auth.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Mzstruct.DB\Mzstruct.DB.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+  </ItemGroup>
+
 </Project>
