--- a/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
+++ b/mzstruct/Mzstruct.Common/Mzstruct.Common.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Folder Include="Contracts\IRepos\" />
+    <Folder Include="Contracts\IServices\" />
   </ItemGroup>
 
 </Project>
