--- a/mzstruct/Mzstruct.Cloud/Mzstruct.Cloud.csproj
+++ b/mzstruct/Mzstruct.Cloud/Mzstruct.Cloud.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Mzstruct.Base\Mzstruct.Base.csproj" />
+  </ItemGroup>
 </Project>
