--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -19,7 +19,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskerDB;Trusted_Connection=True;TrustServerCertificate=true",
     //"DefaultConnection": "Host=db.gqjtrbcqkvmjkxuadypn.supabase.co;Database=postgres;Username=postgres;Password=[YOUR-PASSWORD];SSL Mode=Require;Trust Server Certificate=true",
-    "DatabaseContext": "Server=.\\MSSQLSERVER01;Database=Auth;TrustServerCertificate=True;Trusted_Connection=true;Encrypt=False"
+    "DatabaseContext": "Server=.\\MSSQLSERVER01;Database=Auth;TrustServerCertificate=True;Trusted_Connection=true;Encrypt=False",
+    "Redis": ""
+  },
+  "RedisConfig": {
+    "ConnectionString": "",
+    "PrefixName": ""
   },
   "JWTAuth": {
     "Issuer": "https://mzsmunna.com", //http://localhost:4200
