--- a/mzstruct/Mzstruct.Notify/Mzstruct.Notify.csproj
+++ b/mzstruct/Mzstruct.Notify/Mzstruct.Notify.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Twilio" />
+    <PackageReference Include="Twilio.AspNet.Core" />
   </ItemGroup>
 
   <ItemGroup>
