scrutior added to resolve command query handlers dynamically

--- a/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
+++ b/mzstruct/Mzstruct.Base/Mzstruct.Base.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <PackageReference Include="Scrutor" />
   </ItemGroup>
 
   <ItemGroup>
