jwt auth option code refactored

--- a/mzstruct/Mzstruct.API/appsettings.json
+++ b/mzstruct/Mzstruct.API/appsettings.json
@@ -29,7 +29,9 @@
   "JWTAuth": {
     "Issuer": "https://mzsmunna.com", //http://localhost:4200
     "Audience": "https://mzsmunna.com", //http://localhost:4200
-    "SecretKey": ""
+    "SecretKey": "",
+    "TokenExpiry": 15,
+    "RefreshTokenExpiry": 90
   },
   "OAuthSignIn": {
     "GitHubAuth": { // create an app on github & find ClientId & ClientSecret in https://github.com/settings/applications/appid
